# ProjetModelSurf

./: .gitignore  CMakeLists.txt  README.md  main.cpp  point.cpp  point.h  pointList.cpp  pointList.h  test
Data/: trim-star_24000.off
InterfaceGraphique/: Makefile
InterfaceGraphique/trimesh2/: Makefile
InterfaceGraphique/viewer/: Makefile  moc_glshaderwindow.cpp
InterfaceGraphique/viewer/shaders/: 2_phong.vert
InterfaceGraphique/viewer/src/: glshaderwindow.cpp  main.cpp
base_projets/: external  models
doc/: CMakeLists.txt  doxyfilerc
dualmc/: README.md
src/: AbstractMesh.cpp  AbstractMesh.h  CMakeLists.txt  ImplicitFunction.cpp  ImplicitFunction.h  Mesh.cpp  Mesh.h  MeshHE.cpp  MeshHE.h  README.md  cloud.cpp  cloud.h  consistent_orientation.cpp  consistent_orientation.h  load_off_file.cpp  load_off_file.h  main.cpp  plane.cpp  plane.h  point.cpp  point.h  pointList.cpp  pointList.h  test.cpp  vector3d.cpp  vector3d.h  vector3dList.cpp  vector3dList.h
tests/: CMakeLists.txt  test.cpp  test_ImplicitFunction.cpp  test_Mesh.cpp  test_consistent_orientation.cpp  test_eigenlib.cpp  test_kNbhd.cpp  test_load_off_file.cpp  test_mesh.cpp  test_perso.cpp  test_planes.cpp
tests/BoostLib_tests/: CMakeLists.txt  test_boost_example.cpp  test_boost_example2.cpp  test_boost_example3.cpp  test_boost_example3_multipleEdges.cpp  test_boost_example3_singleEdge.cpp  test_construct_EMST.cpp  test_construct_mst.cpp  test_dfs.cpp  test_dfs_complex.cpp  test_emst.cpp
tests/Cloud_tests/: CMakeLists.txt  test_basics.cpp  test_cloud.cpp
tests/Point_tests/: CMakeLists.txt  test_affichage.cpp  test_constructeur1.cpp  test_constructeur2.cpp  test_constructeur3.cpp  test_operateur_affectation.cpp  test_operateur_divDouble.cpp  test_operateur_divEq.cpp  test_operateur_minus.cpp  test_operateur_minusEq.cpp  test_operateur_minusUnaire.cpp  test_operateur_multDouble.cpp  test_operateur_multEq.cpp  test_operateur_oflux.cpp  test_operateur_plus.cpp  test_operateur_plusEq.cpp
tests/Vector3d_tests/: CMakeLists.txt  test_accesseur.cpp  test_affichage.cpp  test_constructeur1.cpp  test_constructeur2.cpp  test_constructeur3.cpp  test_operateur_affectation.cpp  test_operateur_divDouble.cpp  test_operateur_divEq.cpp  test_operateur_minus.cpp  test_operateur_minusEq.cpp  test_operateur_minusUnaire.cpp  test_operateur_multDouble.cpp  test_operateur_multEq.cpp  test_operateur_oflux.cpp  test_operateur_plus.cpp  test_operateur_plusEq.cpp
